# voice-ai-assistant

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  test.py
src/: avatar.py  avatar_models.py  chat_history.py  custom_exception.py  guardrails.py  llm.py  logger.py  search.py  speech_to_text.py  tts.py  utils.py  video_cache.py
