[project]
name = "voice-ai-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "elevenlabs>=2.54.0",
    "groq>=1.5.0",
    "langchain-core>=1.4.8",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sarvamai>=0.1.0",
    "streamlit>=1.58.0",
    "tavily-python>=0.7.26",
]
